added a header block and connecting fonts

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Roboto+Condensed&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Car sharing</title>
 </head>
 <body>
-	
+	<!-- header start -->
+	<header class="header">
+		<div class="container">
+			<div class="header__wrapeer">
+				<a class="logo" href="#">
+					<img src="./img/header-logo/header-logo.svg" alt="header-logo">
+				</a>
+				<nav class="menu">
+					<ul class="menu__list">
+						<li class="mune__item"><a class="mune__item-link" href="#">ABOUT US</a></li>
+						<li class="mune__item"><a class="mune__item-link" href="#">CAR PARK</a></li>
+						<li class="mune__item"><a class="mune__item-link" href="#">REVIEWS</a></li>
+						<li class="mune__item"><a class="mune__item-link" href="#">CONTACTS</a></li>
+						<li class="mune__item"><a class="mune__item-link" href="#">TERMS</a></li>
+					</ul>
+				</nav>
+				<a class="phone" href="tel:+38(099)9999090">+38 (099) 999 90 90</a>
+			</div>
+		</div>
+	</header>
+	<!-- header end -->
 </body>
 </html>
