added a block top

--- a/index.html
+++ b/index.html
@@ -33,5 +33,65 @@
 		</div>
 	</header>
 	<!-- header end -->
+	<!-- section top start -->
+	<section class="top">
+		<div class="container">
+			<div class="top__heading">
+				<div class="top__content">
+					<h1 class="top__title">Car sharing in Kyiv luxury cars</h1>
+					<p class="top__text">Order an exclusive car through a mobile application anywhere in the city</p>
+					<a  class="aplication-btn" href="#">Download app</a>
+				</div>
+				<div class="top__slider">
+					<div class="top__slider-item">
+						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
+						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+					</div>
+					<div class="top__slider-item">
+						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
+						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+					</div>
+					<div class="top__slider-item">
+						<img class="top__slider-img" src="./img/top/top-cars.png"alt="cars">
+						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+					</div>
+					<div class="top__slider-item">
+						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
+						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+					</div>
+					<div class="top__slider-item">
+						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
+						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+					</div>
+					<div class="top__slider-item">
+						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
+						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+					</div>
+				</div>
+			</div>
+			<div class="top__bottom">
+				<div class="top__items">
+					<div class="top__item">
+						<img  class="top__item-img" src="./img/top/icon-svg/car.svg" alt="car">
+						<p class="top__item-text">Over 300 vehicles at your disposal</p>
+					</div>
+					<div class="top__item">
+						<img class="top__item-img" src="./img/top/icon-svg/credit-card.svg" alt="credit-card">
+						<p class="top__item-text">Cheaper taxi and own car</p>
+					</div>
+					<div class="top__item">
+						<img class="top__item-img" src="./img/top/icon-svg/map.svg" alt="map">
+						<p class="top__item-text">Best cars anywhere in the city</p>
+					</div>
+				</div>
+				<div class="top__link">
+					<a class="top__link" href="#">Car rental conditions</a>
+					<a class="top__link" href="#">public contract</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- section top end -->
+	
 </body>
 </html>
