added the file index.html link for js

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		</div>
 	</section>
 	<!-- section top end -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.script.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
 	<script src="js/script.js"></script>
