added changes in files

--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
 				<div class="top__slider">
 					<div class="top__slider-item">
 						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
-						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+						<p class="top__slider-text"><span>4 USD/min</span> <span>5 places</span> <span>50 thousand km mileage</span></p>
 					</div>
 					<div class="top__slider-item">
 						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
-						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+						<p class="top__slider-text"><span>4 USD/min</span> <span>5 places</span> <span>50 thousand km mileage</span></p>
 					</div>
 					<div class="top__slider-item">
 						<img class="top__slider-img" src="./img/top/top-cars.png"alt="cars">
-						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+						<p class="top__slider-text"><span>4 USD/min</span> <span>5 places</span> <span>50 thousand km mileage</span></p>
 					</div>
 					<div class="top__slider-item">
 						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
-						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+						<p class="top__slider-text"><span>4 USD/min</span> <span>5 places</span> <span>50 thousand km mileage</span></p>
 					</div>
 					<div class="top__slider-item">
 						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
-						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+						<p class="top__slider-text"><span>4 USD/min</span> <span>5 places</span> <span>50 thousand km mileage</span></p>
 					</div>
 					<div class="top__slider-item">
 						<img class="top__slider-img" src="./img/top/top-cars.png" alt="cars">
-						<p class="top__slider-text">4 USD/min 5 places 50 thousand km mileage</p>
+						<p class="top__slider-text"><span>4 USD/min</span> <span>5 places</span> <span>50 thousand km mileage</span></p>
 					</div>
 				</div>
 			</div>
@@ -86,7 +86,7 @@
 						<p class="top__item-text">Best cars anywhere in the city</p>
 					</div>
 				</div>
-				<div class="top__link">
+				<div class="top__links">
 					<a class="top__link" href="#">Car rental conditions</a>
 					<a class="top__link" href="#">public contract</a>
 				</div>
