added block rent index.html and style.css in block rent

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 	</header>
 	<!-- header end -->
 	<!-- section top start -->
-	<section class="top">
+	<section class="top"> 
 		<div class="container">
 			<div class="top__heading">
 				<div class="top__content">
 					<h1 class="top__title">Car sharing in Kyiv luxury cars</h1>
 					<p class="top__text">Order an exclusive car through a mobile application anywhere in the city</p>
-					<a  class="aplication-btn" href="#">Download app</a>
+					<a class="aplication-btn" href="#">Download app</a>
 				</div>
 				<div class="top__slider">
 					<div class="top__slider-item">
@@ -94,9 +94,48 @@
 		</div>
 	</section>
 	<!-- section top end -->
+	<!-- section rent start -->
+	<section class="rent">
+		<div class="container">
+			<div class="rent__inner">
+				<div class="rent__content">
+					<h3 class="rent__title">Car rental conditions</h3>
+					<p class="rent__text">We value every client and provide a quality car sharing service in Kyiv.</p>
+					<p class="rent__text">
+						It is in order to make it pleasant and safe for you 
+						to use our service on an ongoing basis, we have identified several conditions for renting a car
+					</p>
+					<a class="aplication-btn" href="#">Download app</a>
+				</div>
+				<div class="rent__item">
+					<div class="rent__item-num">01</div>
+					<p class="rent__item-title">Driving experience <br> from 2 years</p>
+					<p class="rent__item-text">In order to rent a car, you need to register your rights in our mobile application</p>
+				</div>
+				<div class="rent__item">
+					<div class="rent__item-num">02</div>
+					<p class="rent__item-title">Only in Kyiv</p>
+					<p class="rent__item-text">
+						Our cars work only within the city limitsKyiv.Out of town on our cars, unfortunately,you can't leave.
+					</p>
+				</div>
+				<div class="rent__item">
+					<div class="rent__item-num">03</div>
+					<p class="rent__item-title">Mobile phone and internet</p>
+					<p class="rent__item-text">
+						To use our service, you need a mobile phone and internet.
+						Booking, payment and all reporting takes place online
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- section rent end -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
+
+
