added new block benefits and style css for block benefits ,and img

--- a/index.html
+++ b/index.html
@@ -131,6 +131,35 @@
 		</div>
 	</section>
 	<!-- section rent end -->
+	<!-- section benefits start -->
+	<section class="benefits">
+		<div class="container">
+			<h3 class="benefits__title">Advantages</h3>
+			<div class="benefits__items">
+				<ul class="benefits__list">
+					<li class="benefits__list-item">car wash every week</li>
+					<li class="benefits__list-item">premium cars</li>
+					<li class="benefits__list-item">powerful engine</li>
+					<li class="benefits__list-item">support 24/7</li>
+					<li class="benefits__list-item">gasoline our expense</li>
+					<li class="benefits__list-item">parking throughout the city</li>
+					<li class="benefits__list-item">car maintenance every month</li>
+				</ul>
+				<img  class="bemefits__images" src="./img/benefits/Rectangle 23.png" alt="photo-car">
+				<div class="benefits__content">
+					<p class="benefits__text">
+						You can choose one of our 300 cars, enjoy the service, improve your standard of living without buying an expensive car,
+					drive everywhere and drive a new premium car every day.
+					</p>
+					<p class="benefits__text">
+						Watch the video presentation of our service and choose a car now!
+					</p>
+					<a  class="video__popup" href="#">  button View <br>presentation</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- section benefits end -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
