added new block and styles css for block ,and slider js

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 		</div>
 	</section>
 	<!-- section rent end -->
+
 	<!-- section benefits start -->
 	<section class="benefits">
 		<div class="container">
@@ -154,12 +155,74 @@
 					<p class="benefits__text">
 						Watch the video presentation of our service and choose a car now!
 					</p>
-					<a  class="video__popup" href="#">  button View <br>presentation</a>
+					<a  class="video__popup" data-fancybox href="https:/www.youtube.com/watch?v=_sI_Ps7JSEK">  button View <br>presentation</a>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- section benefits end -->
+
+	<!-- section reviews start -->
+	<section class="reviews">
+		<div class="container">
+			<h3 class="reviews__title">Reviews</h3>
+			<div class="reviews__slider">
+								<div class="reviews__item">
+									<p class="reviews__item-name">Mikhail, 28 years old</p>
+									<p class="reviews__item-text">
+										I am very glad that you exist! I still can’t buy a behu, but to take a ride is a great opportunity! It feels like I
+										have
+										a personal huge fleet of luxury cars)))
+									</p>
+								</div>
+								<div class="reviews__item">
+									<p class="reviews__item-name">Inna, 35 years old</p>
+									<p class="reviews__item-text">
+										Very happy with your service. I always meet VIP clients only on your cars.
+										It is convenient that the calculation is by the minute, it saves the company's budget.
+									</p>
+								</div>
+								<div class="reviews__item">
+									<p class="reviews__item-name">Igor, 25 years old</p>
+									<p class="reviews__item-text">
+										Igor, 25 years old
+										Guys, you are TOPCHIK!
+										I took the car on a date, drove the girl, she is delighted, I'm happy, everyone is happy)
+									</p>
+								</div>
+								<div class="reviews__item">
+									<p class="reviews__item-name">Marina, 30 years old</p>
+									<p class="reviews__item-text">
+										I love your service. I don't like taxis. In the application, I quickly find a car nearby. Always clean, fresh, a
+										pleasure to sit in it. Before work or shopping, I go in comfort.
+									</p>
+								</div>
+								<div class="reviews__item">
+									<p class="reviews__item-name">Inna, 35 years old</p>
+									<p class="reviews__item-text">
+										Very happy with your service. I always meet VIP clients only on your cars.
+										It is convenient that the calculation is by the minute, it saves the company's budget.
+									</p>
+								</div>
+								<div class="reviews__item">
+									<p class="reviews__item-name">Igor, 25 years old</p>
+									<p class="reviews__item-text">
+										Igor, 25 years old
+										Guys, you are TOPCHIK!
+										I took the car on a date, drove the girl, she is delighted, I'm happy, everyone is happy)
+									</p>
+								</div>
+								<div class="reviews__item">
+									<p class="reviews__item-name">Marina, 30 years old</p>
+									<p class="reviews__item-text">
+										I love your service. I don't like taxis. In the application, I quickly find a car nearby. Always clean, fresh, a
+										pleasure to sit in it. Before work or shopping, I go in comfort.
+									</p>
+								</div>
+			</div>
+		</div>
+	</section>
+	<!-- section reviews end -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
