added new block feedback and style css and img

--- a/index.html
+++ b/index.html
@@ -223,6 +223,23 @@
 		</div>
 	</section>
 	<!-- section reviews end -->
+
+	<!-- section feadback start -->
+	<section class="feedback">
+		<div class="container">
+			<div class="feedback__inner">
+				<img class="feedback__images" src="./img/feedback/Rectangle 38.png" alt="mersedes-car">
+				<form class="feedback__form">
+					<h3 class="feedback__title">Do you have any questions?</h3>
+					<p class="feedback__text">We will call you back and advise on any issue</p>
+					<input class="feedback__input" type="text" placeholder="name">
+					<input class="feedback__input" type="text" placeholder="Phone">
+					<button class="feedback__btn" type="submit">Submit your application</button>
+				</form>
+			</div>
+		</div>
+	</section>
+	<!-- section feadback end -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
