added footer and footer style and img.svg.footer

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 				</a>
 				<nav class="menu">
 					<ul class="menu__list">
-						<li class="mune__item"><a class="mune__item-link" href="#">ABOUT US</a></li>
-						<li class="mune__item"><a class="mune__item-link" href="#">CAR PARK</a></li>
-						<li class="mune__item"><a class="mune__item-link" href="#">REVIEWS</a></li>
-						<li class="mune__item"><a class="mune__item-link" href="#">CONTACTS</a></li>
-						<li class="mune__item"><a class="mune__item-link" href="#">TERMS</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">ABOUT US</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">CAR PARK</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">REVIEWS</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">CONTACTS</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">TERMS</a></li>
 					</ul>
 				</nav>
 				<a class="phone" href="tel:+38(099)9999090">+38 (099) 999 90 90</a>
@@ -36,7 +36,7 @@
 	</header>
 	<!-- header end -->
 	<!-- section top start -->
-	<section class="top"> 
+	<!-- <section class="top"> 
 		<div class="container">
 			<div class="top__heading">
 				<div class="top__content">
@@ -92,10 +92,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- section top end -->
 	<!-- section rent start -->
-	<section class="rent">
+	<!-- <section class="rent">
 		<div class="container">
 			<div class="rent__inner">
 				<div class="rent__content">
@@ -129,11 +129,11 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- section rent end -->
 
 	<!-- section benefits start -->
-	<section class="benefits">
+	<!-- <section class="benefits">
 		<div class="container">
 			<h3 class="benefits__title">Advantages</h3>
 			<div class="benefits__items">
@@ -159,11 +159,11 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- section benefits end -->
 
 	<!-- section reviews start -->
-	<section class="reviews">
+	<!-- <section class="reviews">
 		<div class="container">
 			<h3 class="reviews__title">Reviews</h3>
 			<div class="reviews__slider">
@@ -221,11 +221,11 @@
 								</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- section reviews end -->
 
 	<!-- section feadback start -->
-	<section class="feedback">
+	<!-- <section class="feedback">
 		<div class="container">
 			<div class="feedback__inner">
 				<img class="feedback__images" src="./img/feedback/Rectangle 38.png" alt="mersedes-car">
@@ -238,8 +238,45 @@
 				</form>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- section feadback end -->
+
+	<!-- footer start -->
+	<!-- <footer class="footer">
+		<div class="container">
+			<div class="footer__top">
+				<a class="aplication-btn" href="#">Download app</a>
+				<nav class="menu">
+					<ul class="menu__list">
+						<li class="menu__item"><a class="menu__item-link" href="#">ABOUT US</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">CAR PARK</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">REVIEWS</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">CONTACTS</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">TERMS</a></li>
+					</ul>
+				</nav>
+				<a class="phone" href="tel:+38(099)9999090">+38 (099) 999 90 90</a>
+			</div>
+			<ul class="footer_social">
+				<li class="footer__social-item">
+					<a class="footer__social-item" href="#">
+						<img class="footer__social-img" src="./img/footer/facebook.svg" alt="#" >
+					</a>
+				</li>
+				<li class="footer__social-item">
+					<a class="footer__social-item" href="#">
+						<img class="footer__social-img" src="./img/footer/instagram.svg" alt="#">
+					</a>
+				</li>
+				<li class="footer__social-item">
+					<a class="footer__social-item" href="#">
+						<img class="footer__social-img" src="./img/footer/youtube.svg" alt="#">
+					</a>
+				</li>
+			</ul>
+		</div>
+	</footer> -->
+	<!-- footer end -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
