work media and js menu burger

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<img src="./img/header-logo/header-logo.svg" alt="header-logo">
 				</a>
 				<nav class="menu">
+					<button class="menu__btn"></button>
 					<ul class="menu__list">
 						<li class="menu__item"><a class="menu__item-link" href="#">ABOUT US</a></li>
 						<li class="menu__item"><a class="menu__item-link" href="#">CAR PARK</a></li>
