added media style in project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</header>
 	<!-- header end -->
 	<!-- section top start -->
-	<!-- <section class="top"> 
+	<section class="top"> 
 		<div class="container">
 			<div class="top__heading">
 				<div class="top__content">
@@ -93,10 +93,10 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 	<!-- section top end -->
 	<!-- section rent start -->
-	<!-- <section class="rent">
+	<section class="rent">
 		<div class="container">
 			<div class="rent__inner">
 				<div class="rent__content">
@@ -130,11 +130,11 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section> 
 	<!-- section rent end -->
 
 	<!-- section benefits start -->
-	<!-- <section class="benefits">
+	<section class="benefits">
 		<div class="container">
 			<h3 class="benefits__title">Advantages</h3>
 			<div class="benefits__items">
@@ -160,11 +160,11 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section> 
 	<!-- section benefits end -->
 
 	<!-- section reviews start -->
-	<!-- <section class="reviews">
+	<section class="reviews">
 		<div class="container">
 			<h3 class="reviews__title">Reviews</h3>
 			<div class="reviews__slider">
@@ -222,11 +222,11 @@
 								</div>
 			</div>
 		</div>
-	</section> -->
+	</section> 
 	<!-- section reviews end -->
 
 	<!-- section feadback start -->
-	<!-- <section class="feedback">
+	<section class="feedback">
 		<div class="container">
 			<div class="feedback__inner">
 				<img class="feedback__images" src="./img/feedback/Rectangle 38.png" alt="mersedes-car">
@@ -239,11 +239,11 @@
 				</form>
 			</div>
 		</div>
-	</section> -->
+	</section> 
 	<!-- section feadback end -->
 
 	<!-- footer start -->
-	<!-- <footer class="footer">
+	<footer class="footer">
 		<div class="container">
 			<div class="footer__top">
 				<a class="aplication-btn" href="#">Download app</a>
@@ -276,7 +276,7 @@
 				</li>
 			</ul>
 		</div>
-	</footer> -->
+	</footer> 
 	<!-- footer end -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/slick.min.js"></script>
